syntax = "proto3";
import "google/protobuf/any.proto";

package ntreev.crema.services.users;

service IUserContextService {
    rpc Subscribe (SubscribeRequest) returns (SubscribeReply) {}
    rpc Unsubscribe (SubscribeRequest) returns (SubscribeReply) {}
    rpc Poll(PollRequest) returns (PollReply) {}
}

message SubscribeRequest {
    string id = 1;
    google.protobuf.Any type = 2;
}

message SubscribeReply {
    string id = 1;
}

message PollRequest {
    string id = 1;
}

message PollReply {
    string id = 1;
}
